# SlideForge

./: .gitignore  README.md  app.py  index (8).html  main.py  pyproject.toml  requirement.txt
notebook/: document.ipynb
