[project]
name = "rag-ppt-maker-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "arxiv>=2.4.1",
    "chromadb>=1.5.5",
    "faiss-cpu>=1.13.2",
    "ipykernel>=7.2.0",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.23",
    "langchain-text-splitters>=1.1.1",
    "pymupdf>=1.27.2.2",
    "sentence-transformers>=2.7.0",
    "torch>=2.1.0",
    "transformers==4.41.2",
    "greenlet>=3.0.3,<3.1.0",
    "wikipedia>=1.4.0",
    "accelerate>=1.13.0",
    "tqdm>=4.67.3",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "openai>=1.0.0",
    "fastapi>=0.135.3",
    "uvicorn>=0.44.0",
    "python-pptx>=1.0.2",
]
